use Prettier in all files

--- a/src/components/CalculatorModal/calculator.css
+++ b/src/components/CalculatorModal/calculator.css
@@ -1,100 +1,94 @@
 * {
-    box-sizing: border-box;
- }
+  box-sizing: border-box;
+}
 
- .modal {
-   height: 100vh;
-   background: rgba(0,0,0,0.4);
-   position: fixed;
-   top: 0;
-   right: 0;
-   bottom: 0;
-   left: 0;
-   display: flex;
-    align-items: center;
-    justify-content: center;
-    opacity: 0;
-    pointer-events: none;
-    transition: 0.5s;
- }
+.modal {
+  height: 100vh;
+  background: rgba(0, 0, 0, 0.4);
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  opacity: 0;
+  pointer-events: none;
+  transition: 0.5s;
+}
 
- .modal.active {
-   opacity: 1;
-pointer-events: all;
- }
+.modal.active {
+  opacity: 1;
+  pointer-events: all;
+}
 
- .modal__content{
-   padding: 20px;
-   border-radius: 12px;
-   background-color: #fff;
-   border-radius: 30px;
-   /* height: 400px; */
-   width:50vh;
-   transform: scale(0.5);
-   transition: 0.4s all;
- }
+.modal__content {
+  padding: 20px;
+  border-radius: 12px;
+  background-color: #fff;
+  border-radius: 30px;
+  width: 50vh;
+  transform: scale(0.5);
+  transition: 0.4s all;
+}
 
+.modal__content.active {
+  transform: scale(1);
+}
 
+.form-inner {
+  padding: 40px;
+}
 
- .modal__content.active {
-   transform: scale(1);
+.form-title {
+  text-align: center;
+  padding-bottom: 10px;
+}
+.form-inner input,
+.form-inner textarea {
+  display: block;
+  width: 100%;
+  padding: 10px 20px;
+  margin-bottom: 10px;
+  background: #e9eff6;
+  line-height: 40px;
+  border-width: 0;
+  border-radius: 20px;
+  font-family: "Roboto", sans-serif;
+}
+.form-inner input[type="submit"] {
+  margin-top: 30px;
+  background-color: #a9845c;
+  cursor: pointer;
+  color: white;
+  font-size: 14px;
+}
+.form-inner textarea {
+  resize: none;
+}
+.form-inner h3 {
+  margin-top: 0;
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
+  font-size: 24px;
+  color: #707981;
+}
 
- }
+.form-inner input[type="submit"]:hover {
+  background-color: #926341;
+}
 
- .form-inner {
-    padding: 40px;
- 
-
- } 
- 
- .form-title {
-   text-align: center;
-   padding-bottom: 10px;
- }
- .form-inner input, .form-inner textarea {
-    display: block;
-    width: 100%;
-    padding: 10px 20px;
-    margin-bottom: 10px;
-    background: #E9EFF6;
-    line-height: 40px;
-    border-width: 0;
-    border-radius: 20px;
-    font-family: 'Roboto', sans-serif;
- }
- .form-inner input[type="submit"] {
-    margin-top: 30px;
-    background-color: #A9845C;
-   cursor: pointer;
-    color: white;
-    font-size: 14px;
- }
- .form-inner textarea {
-    resize: none;
- }
- .form-inner h3 {
-    margin-top: 0;
-    font-family: 'Roboto', sans-serif;
-    font-weight: 500;
-    font-size: 24px;
-    color: #707981;}
-
-    .form-inner input[type="submit"]:hover {
-    background-color: #926341;
-
-    }
-
-    @media (max-width: 500px) {
-
-      .modal{
-         height: 100%;
-      }
-      .modal__content {
-         padding: 5px;
-         width: 40vh;
-      }
-      .form-inner input, .form-inner textarea {
-         line-height: 20px;
-      }
-      }
-
+@media (max-width: 500px) {
+  .modal {
+    height: 100%;
+  }
+  .modal__content {
+    padding: 5px;
+    width: 40vh;
+  }
+  .form-inner input,
+  .form-inner textarea {
+    line-height: 20px;
+  }
+}
