--- a/src/components/Menu/menu.css
+++ b/src/components/Menu/menu.css
@@ -1,67 +1,63 @@
-.menu{
-    position: fixed;
-    width: 100vw;
-    height: 100vh;
-    top: 80px;
-    left: 0;
-    z-index: 2;
-    transform: translateX(-130%);
-    transition: all 0.2s;
+.menu {
+  position: fixed;
+  width: 100vw;
+  height: 100vh;
+  top: 80px;
+  left: 0;
+  z-index: 2;
+  transform: translateX(-130%);
+  transition: all 0.2s;
 }
 
-.menu.active{
-    transform: translateX(0);
-}
-
-.blur{
-    width: 100vw;
-    height: 100vh;
-    left: 30%;
-    backdrop-filter: blur(2px);  
-    position: absolute;
-}
-
-.menu__content{
-    width: 30%;
-    height: 100%;
-
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background-color: #3B3937;
-color: white;
-transition: all 0.4s;
-
-}
-
-.menu__header{
-    padding: 10px;
-    font-size: 2rem;
-    border-bottom: 1px solid white;
-    width: 100%;
-    text-align: center;
-}
-
-.menu__list {
-    padding-top: 2rem;
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-}
-
-
-@media (max-width: 600px) {
-    .menu {
-      top: 60px;
-      transform: translateX(-150%);
-    }
-.menu__content {
-    width: 50%;
+.menu.active {
+  transform: translateX(0);
 }
 
 .blur {
-    left: 50%;
+  width: 100vw;
+  height: 100vh;
+  left: 30%;
+  backdrop-filter: blur(2px);
+  position: absolute;
 }
 
+.menu__content {
+  width: 30%;
+  height: 100%;
 
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #3b3937;
+  color: white;
+  transition: all 0.4s;
+}
+
+.menu__header {
+  padding: 10px;
+  font-size: 2rem;
+  border-bottom: 1px solid white;
+  width: 100%;
+  text-align: center;
+}
+
+.menu__list {
+  padding-top: 2rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+@media (max-width: 600px) {
+  .menu {
+    top: 60px;
+    transform: translateX(-150%);
+  }
+  .menu__content {
+    width: 50%;
+  }
+
+  .blur {
+    left: 50%;
+  }
 }
