--- a/src/components/Slider/slider.css
+++ b/src/components/Slider/slider.css
@@ -1,74 +1,68 @@
-
 .img {
-width: 100%;
-height: 100vh;
-display: block
+  width: 100%;
+  height: 100vh;
+  display: block;
 }
 .swiper {
-	position: relative;
-	color: white;
-
+  position: relative;
+  color: white;
 }
 
 .circle {
-
-	width: 28em;
-	height: 28em;
-	border-radius: 50%;
-	background-color: #33333380;
-	z-index: 0;
+  width: 28em;
+  height: 28em;
+  border-radius: 50%;
+  background-color: #33333380;
+  z-index: 0;
 }
 .title {
-	font-size: 3.4rem;
-	z-index: 0;
-	text-align: center;
+  font-size: 3.4rem;
+  z-index: 0;
+  text-align: center;
 }
 
 .subTitle {
-	font-size: 2rem;
-	margin-top: 5rem;
-	z-index: 0;
-
+  font-size: 2rem;
+  margin-top: 5rem;
+  z-index: 0;
 }
 
 .btnSlider {
-	padding: 3rem;
-	margin-top: 13rem;
-	z-index: 0;
-
+  padding: 3rem;
+  margin-top: 13rem;
+  z-index: 0;
 }
 
- 
-.swiper .swiper-button-prev, .swiper .swiper-button-next {
-color: black;
-
+.swiper .swiper-button-prev,
+.swiper .swiper-button-next {
+  color: black;
 }
-.swiper-pagination-fraction, .swiper-pagination-custom, .swiper-horizontal > .swiper-pagination-bullets, .swiper-pagination-bullets.swiper-pagination-horizontal {
-	z-index: 0;
+.swiper-pagination-fraction,
+.swiper-pagination-custom,
+.swiper-horizontal > .swiper-pagination-bullets,
+.swiper-pagination-bullets.swiper-pagination-horizontal {
+  z-index: 0;
 }
-
-
 
 @media (max-width: 575px) {
-.circle {
-	width: 25em;
-	height: 25em;
-}
+  .circle {
+    width: 25em;
+    height: 25em;
+  }
 
-.title {
-	padding-bottom: 2rem;
-	font-size: 3.4rem;
-
-}
+  .title {
+    padding-bottom: 2rem;
+    font-size: 3.4rem;
+  }
 }
 
 @media (max-width: 500px) {
-	.circle {
-		width: 17em;
-		height: 18em;
-	}
+  .circle {
+    width: 17em;
+    height: 18em;
+  }
 
-	.img {
-		height: 60vh;
-	}
-	}
+  .img {
+    height: 60vh;
+  }
+}
