--- a/src/components/Menu/menu.css
+++ b/src/components/Menu/menu.css
@@ -48,6 +48,25 @@
   gap: 1rem;
 }
 
+.back-to-top{
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  display: none;
+  font-size: 24px;
+  color: #fff;
+  background: #000;
+  padding: 5px 10px;
+  border-radius: 5px;
+  cursor: pointer;
+  z-index: 1000;
+}
+
+.back-to-top:hover {
+  background: #333;
+  text-decoration: none;
+}
+
 @media (max-width: 600px) {
   .menu {
     top: 60px;
