--- a/src/components/OurWorks/works.module.css
+++ b/src/components/OurWorks/works.module.css
@@ -13,15 +13,22 @@
   display: flex;
   justify-content: center;
   gap: 5rem;
+  flex-wrap: wrap;
 }
 
 .wrapper {
-  gap: 1rem;
-
+  gap: 2rem;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
   transition: 1s;
+  width: 30%;
+align-items: center;
+}
+
+.text {
+  word-wrap: break-word;
+  text-align: center;
+  width: 100%;
 }
 
 .img {
@@ -34,6 +41,7 @@
   cursor: pointer;
 }
 
+
 @media (max-width: 992px) {
   .work {
     flex-direction: column;
@@ -41,6 +49,6 @@
   }
 
   .wrapper {
-    align-items: center;
+    width: 100%;
   }
 }
