--- a/src/components/Menu/menu.css
+++ b/src/components/Menu/menu.css
@@ -24,28 +24,30 @@
 .menu__content {
   width: 30%;
   height: 100%;
-
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-start;
   background-color: #3b3937;
   color: white;
   transition: all 0.4s;
 }
 
-.menu__header {
+/* .menu__header {
   padding: 10px;
   font-size: 2rem;
   border-bottom: 1px solid white;
   width: 100%;
   text-align: center;
-}
+} */
 
 .menu__list {
   padding-top: 2rem;
+  padding-left: 2rem;
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  gap: 2rem;
+  border-top: 1px solid white;
+  width: 100%;
 }
 
 .back-to-top{
@@ -65,6 +67,14 @@
 .back-to-top:hover {
   background: #333;
   text-decoration: none;
+}
+
+.menu__btns {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  padding-left: 2rem;
+  padding-top: 2rem;
 }
 
 @media (max-width: 600px) {
