--- a/src/components/CalculatorModal/calculator.css
+++ b/src/components/CalculatorModal/calculator.css
@@ -38,8 +38,8 @@
 .modal__close:before {
   position: absolute;
   content: "X";
-  top: 5%;
-  left: 92%;
+  top: 4%;
+  left: 91%;
   font-family: "Roboto", sans-serif;
   font-weight: 500;
   color: #707981;
@@ -57,6 +57,7 @@ color: #3b3937;
 
 
 .form-inner {
+  font-size: 16px;
   padding: 40px;
 }
 
