--- a/src/components/Contacts/contacts.module.css
+++ b/src/components/Contacts/contacts.module.css
@@ -35,7 +35,7 @@
 @media (max-width: 992px) {
   .main {
     flex-direction: column;
-    gap: 0;
+    gap: 1rem;
   }
   .img {
     display: none;
