--- a/src/components/Header/header.module.css
+++ b/src/components/Header/header.module.css
@@ -12,17 +12,39 @@
 }
 
 .logo {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
+
+
+
+/*#926341*/
+.title {
   font-weight: bold;
   color: #dbb48a;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-shadow:
+  -1px -1px 0 black,
+  1px -1px 0 black,
+  -1px 1px 0 black,
+  1px 1px 0 black;
+}
+
+.subtitle {
+  font-size: 1.6rem;
 }
 
 .img {
-  width: 60px;
-  height: 60px;
+  width: 7rem;
+  height: 7rem
 }
 
 .list {
   display: flex;
+  align-items: center;
   gap: 3rem;
 }
 
@@ -70,17 +92,13 @@
   height: 2px;
 }
 
-
-
-@media (max-width: 1090px) {
+@media (max-width: 1170px) {
   .header {
-    flex-direction: column;
-    padding: 1rem 0;
-    height: 10rem;
+    padding: 1rem;
   }
 }
 
-@media (max-width: 600px) {
+@media (max-width:770px) {
   .burger {
     display: block;
   }
@@ -94,8 +112,13 @@
   }
 
   .header {
-    height: 6rem;
+    height: 8rem;
     flex-direction: row;
     padding: 1rem 1.2rem;
+    justify-content: flex-start;  
+  }
+
+  .logo {
+    padding-left: 2rem;
   }
 }
