--- a/src/components/Slider/slider.css
+++ b/src/components/Slider/slider.css
@@ -20,7 +20,10 @@
   font-size: 3.4rem;
   z-index: 0;
   text-align: center;
+  font-weight: 300;
+  padding-bottom: 3rem;
 }
+
 
 .subTitle {
   font-size: 2rem;
@@ -100,6 +103,7 @@
 }
 .title {
   font-size: 1.6rem;
+  padding-bottom: 4rem;
 }
 .subTitle {
   margin-top: 2rem;
